基础代码同步