@@ -1,11 +1,11 @@
 package cc.wdev.platform.commons.core.ai;
 
+import cc.wdev.platform.commons.core.ai.tools.CommonTools;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -18,10 +18,10 @@ import java.util.List;
 public class AiCustomizer {
 
     @Builder.Default
-    private List<Object> tools = List.of();
+    private List<Object> tools = List.of(new CommonTools());
 
     public static AiCustomizer defaultCustomizer() {
-        return AiCustomizer.builder().tools(Collections.emptyList()).build();
+        return AiCustomizer.builder().tools(List.of(new CommonTools())).build();
     }
 
 }
